# secret-contract-template

./: Cargo.toml  README.md
examples/: schema.rs
src/: contract.rs  lib.rs  msg.rs  state.rs
