[package]
name = "secret_contract_template"
version = "1.0.0"
authors = ["Lumi - Trivium"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
#debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.8"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit/", branch = "cosmwasm-v1.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key", "permit"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
